@startuml

class Client{
}
interface Poptional{
    <B>static Poptional<T> ofNullable(Poptional<T> t)
}
abstract class Something
class Nothing
class Foo {
    String getFirstName()
    String getLastName()
}

Poptional <|-- Something
Poptional <|-- Nothing
Something <|-- Foo
Client -> Poptional: ofNullable
@enduml